--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-gtk-theme (0.1.6) unstable; urgency=medium
+
+  * Add pardus-software listbox, flowbox styles
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Fri, 04 Mar 2022 16:11:26 +0300
+
 pardus-gtk-theme (0.1.5) unstable; urgency=medium
 
   * Add @2 assets of pardus gtk3 theme
